# gst-vqe

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac
src/: Makefile.am  gstvqe.c  gstvqesdpdemux.c  gstvqesdpdemux.h  gstvqesrc.c  gstvqesrc.h
tools/: Makefile.am  vqe-launch.c
